Finish the main content and fix layout issues

--- a/style.css
+++ b/style.css
@@ -29,7 +29,8 @@ body{
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 4.5fr;
+    grid-template-rows: auto 1fr;
+    min-height: 100vh;
 }
 
 .header{
@@ -39,6 +40,7 @@ body{
     grid-template-rows: auto auto;
     padding: 25px 50px;
     gap: 30px;
+    box-shadow: 0 8px 6px -6px rgba(0, 0, 0, 0.3);
 }
 
 .top{
@@ -170,7 +172,9 @@ label{
     display: grid;
     grid-template-rows: repeat(3,1fr);
     gap: 15px;
+
 }
+
 
 .dash ~ div div {
     font-size: 22px;
@@ -192,6 +196,183 @@ label{
     grid-row: 2;
     grid-column: 2;
     background-color: rgba(233, 231, 231, 0.696);
+    display: grid;
+    grid-template-columns: 2.6fr 1fr;
+    padding: 30px;
+    padding-bottom: 60px;
+    column-gap: 30px;
+
 }
 
-/* the color of user_profile is #94D82D in hex*/
+.main h3{
+    margin-top: 0;
+    font-size: 20px;
+    color: black;
+    margin-bottom: 0;
+}
+
+.projects{
+    display: grid;
+    grid-template-rows: 1.3em 1fr;
+    row-gap: 20px;
+}
+
+:link{
+    text-decoration: none;
+    color: inherit;
+    height: 200px;
+    display: contents;
+}
+
+
+.articles{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 25px;
+    row-gap:30px;
+}
+
+.articles h4{
+    margin: 0;
+    color: black;
+}
+
+.cards{
+    height: 220px;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    padding-left: 30px;
+    padding-top: 50px;
+    box-shadow: 
+    inset 7px 0 0 0 #94D82D,
+    0 5px 10px rgba(0, 0, 0, 0.15);
+}
+
+.cards:hover{
+    box-shadow: inset 7px 0 0 0 #94D82D,
+     4px 12px 20px rgba(0, 0, 0, 0.2);
+}
+
+.cards h4{
+    height: 1em;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.cards p{
+    margin: 0;
+    font-size: 16px;
+    color: gray;
+}
+
+.card_icons{
+    display: flex;
+    justify-self: end;
+    height: auto;
+    gap: 15px;
+}
+
+.card_icons img{
+    height: 1.5em;
+    width: auto;
+}
+
+
+.main_side{
+    display: grid;
+    grid-template-rows: auto auto;
+    gap: 20px;
+}
+
+.announcements{
+    display: grid;
+    grid-template-rows: 1.3em 1fr;
+    row-gap: 20px;
+}
+
+.announce{
+    display: grid;
+    grid-template-rows: auto auto auto;
+    font-size: 14px;
+    color: gray;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+.announce div{
+    height: fit-content;
+    padding: 10px;
+}
+
+.announce div :nth-child(1){
+    font-size: 15px;
+    font-weight: 600;
+    color: black;
+    margin: 0;
+}
+
+.announce div:nth-child(-n+2){
+    border-bottom: 1px solid rgb(234, 231, 231);
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.announce div :nth-child(2){
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.trending{
+    display: grid;
+    grid-template-rows: 1.3em 1fr;
+    row-gap: 20px;
+}
+
+.trend{
+    background-color: white;
+    display: grid;
+    grid-template-rows: repeat(4,auto);
+    font-size: 14px;
+    padding: 25px;
+    border-radius: 10px;
+    row-gap: 10px;
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+.trend > div{
+    display: flex;
+    align-items: center;
+}
+
+.trend > div *{
+    margin: 0;
+}
+
+.trend img{
+    height: 3em;
+    width: auto;
+    margin-right: 10px;
+}
+
+.trend > div >div{
+    display: flex;
+    flex-direction: column;
+}
+
+.trend > div > div :nth-child(2){
+    color: grey;
+}
+
+
+
+
+
+
+
+
